Fix the "scroll on click" issue

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=795085

* src/balsa-message.c (balsa_message_init): wrap the
  BalsaMimeWidget::widget in a GtkViewport; if we do not,
  GtkContainer does it for us, but also sets it up to scroll when
  first clicked, which leaves the wrong text under the pointer.