src/balsa-message.c
@@ -691,6 +691,7 @@ balsa_message_init(BalsaMessage * bm)
     GtkStack  *stack;
     GtkWidget *vbox;
     GtkWidget *scroll;
+    GtkWidget *viewport;
     GtkWidget **buttons;
     GtkTreeStore *model;
     GtkCellRenderer *renderer;
@@ -737,7 +738,13 @@ balsa_message_init(BalsaMessage * bm)
     g_signal_connect(G_OBJECT(bm->bm_widget->widget), "focus_out_event",
                      G_CALLBACK(balsa_mime_widget_unlimit_focus),
 		     (gpointer) bm);
-    gtk_container_add(GTK_CONTAINER(bm->scroll), bm->bm_widget->widget);
+
+    /* If we do not add the widget to a viewport, GtkContainer would
+     * provide one, but it would also set it up to scroll on grab-focus,
+     * which has been really annoying for a long time :-( */
+    viewport = gtk_viewport_new(NULL, NULL);
+    gtk_container_add(GTK_CONTAINER(viewport), bm->bm_widget->widget);
+    gtk_container_add(GTK_CONTAINER(bm->scroll), viewport);
 
     /* structure view */
     model = gtk_tree_store_new (NUM_COLUMNS,
